--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MUTTAM SOUQ SUPERMARKET ONLINE</title>
-  <link rel="website icon" type="png" href="m.webp">
+  <link rel="website icon" type="png" href="m (1).webp">
   <style>
     body {
       font-family: Arial, sans-serif;
