--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
 
   <div class="product-list" id="product-list">
     <div class="product" data-name="onion">
-      <img src="onion.webp" alt="Onion">
+      <img src="onion.jpg" alt="Onion">
       <h3>Onion</h3>
       <p>Price: ₹40-70 per kg</p>
       <button onclick="addToCart(1, 'Onion', 40)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="tomato">
-        <img src="tomato.webp" alt="Tomato">
+        <img src="tomatoes.webp" alt="Tomato">
         <h3>Tomato</h3>
         <p>Price: ₹20-50 per kg</p>
         <button onclick="addToCart(2, 'Tomato', 20)">Add to Cart</button>
     </div>
     
     <div class="product" data-name="potato">
-        <img src="potato.webp" alt="Potato">
+        <img src="potatoes.jpg" alt="Potato">
         <h3>Potato</h3>
         <p>Price: ₹20</p>
         <button onclick="addToCart(3, 'Potato', 20)">Add to Cart</button>
