--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
 
   <div class="product-list" id="product-list">
     <div class="product" data-name="onion">
-      <img src="onion (1).jpg" alt="Onion">
+      <img src="onion (1).webp" alt="Onion">
       <h3>Onion</h3>
       <p>Price: ₹40-70 per kg</p>
       <button onclick="addToCart(1, 'Onion', 40)">Add to Cart</button>
     </div>
 
     <div class="product" data-name="tomato">
-        <img src="tomatoes (1).webp" alt="Tomato">
+        <img src="tomato (1).webp" alt="Tomato">
         <h3>Tomato</h3>
         <p>Price: ₹20-50 per kg</p>
         <button onclick="addToCart(2, 'Tomato', 20)">Add to Cart</button>
     </div>
     
     <div class="product" data-name="potato">
-        <img src="potatoes (1).jpg" alt="Potato">
+        <img src="potato (1).webp" alt="Potato">
         <h3>Potato</h3>
         <p>Price: ₹20</p>
         <button onclick="addToCart(3, 'Potato', 20)">Add to Cart</button>
@@ -181,7 +181,7 @@
     </div>
     
     <div class="product" data-name="pomegranate">
-        <img src="pomegrenate.webp" alt="Pomegranate">
+        <img src="pomegrenate  (1).webp" alt="Pomegranate">
         <h3>Pomegranate</h3>
         <p>Price: ₹55</p>
         <button onclick="addToCart(7, 'Pomegranate', 55)">Add to Cart</button>
