--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
     </div>
     
     <div class="product" data-name="carrot">
-        <img src="carrot.webp" alt="Carrot">
-        <h3>Carrot (1)</h3>
+        <img src="carrot (1).webp" alt="Carrot">
+        <h3>Carrot</h3>
         <p>Price: ₹37</p>
         <button onclick="addToCart(4, 'Carrot', 37)">Add to Cart</button>
     </div>
